src/assets/styles/home.scss
$left-menu-x-padding: 2rem;
$search-input-border-radius: 7px;

.left-side-menu,
.right-side-menu {
  height: 100vh;
  overflow: scroll;
  display: flex;
  flex-direction: column;
  background-color: $background-light-color;
  color: #aaa;
  padding-top: 2rem;
}

.left-side-menu {
  width: 14rem;
  min-width: 14rem;

  .menu-items {
    list-style: none;
    padding: 0px;
    margin-top: 0px;
    margin-bottom: 0px;

    .menu-section-title {
      font-size: 0.7rem;
      text-align: start;
      padding: 0px $left-menu-x-padding;
      margin-bottom: 0.5rem;
      margin-top: 2rem;
    }

    .right-menu-btn {
      display: flex;
      align-items: center;
      gap: 1rem;
      padding: 1rem $left-menu-x-padding;
      cursor: pointer;
      transition: all 0.1s ease-in;
      border-left: 2px solid transparent;

      &.active {
        color: $primary-color;
        background-color: $highligh-color;
        border-left: 2px solid $primary-color;
      }

      &:hover {
        color: white;
        background-color: $highligh-color;
      }
    }
  }
}

.right-side-menu {
  width: 25rem;
  min-width: 25rem;
  gap: 2rem;

  .user-bar {
    display: flex;
    justify-content: space-between;
    color: white;

    .ant-btn-text {
      color: white;
    }

    .leading {
      gap: 0.5rem;
    }

    .trailing {
      gap: 0.5rem;

      .ant-btn {
        padding: 0.3rem 0.4rem;
        font-size: 1.1rem;
        display: flex;
        justify-content: center;
        align-items: center;
      }

      .notifications-btn {
        position: relative;

        .unseen-notifications {
          position: absolute;
          width: 5px;
          height: 5px;
          border-radius: 50%;
          background-color: $primary-color;
          z-index: 1;
          top: 8px;
          right: 8px;
        }
      }
    }
  }

  .side-menu-search-input {
    // background-color: $highligh-color;

    .ant-input-wrapper {
      // background-color: $highligh-color;
      border-radius: $search-input-border-radius;

      &:focus {
        border: none;
        box-shadow: none;
      }

      .ant-input-affix-wrapper {
        background-color: $highligh-color;
        border-top-left-radius: $search-input-border-radius;
        border-bottom-left-radius: $search-input-border-radius;
        border: none;

        &:focus {
          border: none;
          box-shadow: none;
        }

        .ant-input {
          background-color: $highligh-color;
          border: none;
          border-top-left-radius: $search-input-border-radius;
          border-bottom-left-radius: $search-input-border-radius;
          height: 2rem;
          color: white;

          &:focus {
            border: none;
            box-shadow: none;
          }
        }
      }

      .ant-input-group-addon {
        background-color: $highligh-color;
        border: none;
        border-top-right-radius: $search-input-border-radius;
        border-bottom-right-radius: $search-input-border-radius;

        .ant-btn {
          background-color: $highligh-color;
          border: none;
          color: #aaa;
        }
      }
    }
  }

  .side-menu-category-filter-btns {
    display: flex;
    flex-wrap: wrap;
    gap: 0.3rem;

    .category-filter-btn {
      color: white;
      background-color: $highligh-color;
      border-radius: 10px;
      padding: 1.2rem 1.2rem;
      display: flex;
      justify-content: center;
      align-items: center;

      &.selected {
        background-color: $secondary-color;
      }
    }
  }

  .side-menu-popular-movies {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  .side-menu-movie-item {
    background-color: $highligh-color;
    border-radius: 20px;
    display: flex;
    height: 6.5rem;
    min-height: 6.5rem;
    cursor: pointer;
    // gap: 0.5rem;

    .img-container {
      position: relative;
      display: flex;
      align-items: flex-end;
      // width: 10rem;
      min-width: 7rem;
      padding: 0.3rem 0.5rem;

      img {
        border-radius: 20px;
        width: 100%;
        height: 100%;
        position: absolute;
        left: 0px;
        right: 0px;
        top: 0px;
        bottom: 0px;
        z-index: 1;
        object-fit: cover;
      }

      .likes,
      .rating {
        position: relative;
        z-index: 2;
      }

      .likes {
        color: red;
      }

      .rating {
        color: orange;
      }
    }

    .details {
      display: flex;
      flex-direction: column;
      color: white;
      justify-content: space-between;
      align-items: flex-start;
      padding: 0.4rem 0.5rem;

      .title {
        color: white;
        font-size: 0.8rem;
        text-align: start;
      }

      .description {
        color: #ddd;
        font-size: 0.6rem;
        text-align: start;
      }
    }
  }

  .side-menu-search-results {
    gap: 1rem;
    overflow-y: scroll;
    padding-bottom: 2rem;
  }

  .side-menu-popular-actors {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    .side-menu-actor-item {
      display: flex;
      gap: 0.5rem;

      .details {
        flex: 1;

        .name {
          color: white;
          text-align: start;
        }

        .followers,
        .country,
        .followers-label {
          color: #aaa;
          font-size: 0.7rem;
        }
      }
    }
  }
}

.home {
  display: flex;

  .home-main-content {
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 2rem;
    // padding-top: 2rem;
    padding-bottom: 2rem;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: scroll;

    .home-header {
      // height: 2.5rem;
      display: none;
      width: 100%;
      padding: 0.5rem 1rem;
      color: white;

      .ant-btn {
        color: white;
      }
    }

    .home-discover-section {
      // padding: 0rem 1rem 0rem 1rem;
      padding-top: 2rem;

      .section-title {
        font-size: 2rem;
        color: white;
        text-align: start;
      }

      .discover-list {
        display: flex;
        gap: 1rem;
        overflow: scroll;

        .discover-list-item {
          position: relative;
          height: 16rem;
          width: 28rem;
          border-radius: 20px;
          cursor: pointer;

          img {
            height: 16rem;
            width: 28rem;
            object-fit: cover;
            position: absolute;
            left: 0px;
            right: 0px;
            top: 0px;
            bottom: 0px;
            z-index: 1;
            border-radius: 20px;
          }

          .content {
            position: relative;
            z-index: 2;
            height: 16rem;
            width: 28rem;
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
            color: white;
            padding: 1rem 1rem;

            .title {
              color: white;
              text-shadow: 0px 0px 2px #000;
              text-align: start;
              font-weight: bold;
            }

            .subtitle {
              margin-bottom: 0px;
              color: #ddd;
              text-shadow: 0px 0px 2px #000;
            }

            .rating {
              color: orange;
              display: flex;
              align-items: center;
              gap: 0.4rem;
              text-shadow: 0px 0px 2px #000;
            }
          }
        }
      }
    }

    .home-movie-category-list {
      .movies-list {
        display: flex;
        gap: 1rem;
        overflow: scroll;

        .movie-category-list-item {
          cursor: pointer;
          height: 15rem;
          aspect-ratio: 11 / 16;

          img {
            width: 100%;
            height: 100%;
            object-fit: cover;
            border-radius: 15px;
          }
        }
      }
    }
  }
}

.ant-drawer-content {
  .ant-drawer-body {
    padding: 0px;
  }

  .ant-drawer-header {
    background-color: $background-light-color;
    border-bottom: 1px solid $highligh-color;

    .ant-drawer-close {
      color: white;
    }
  }

  .left-side-menu,
  .right-side-menu {
    width: 100%;
    min-width: 100%;
  }
}

@media (max-width: 1124px) {
  .home {
    .left-side-menu,
    .right-side-menu {
      display: none;
    }

    .home-main-content {
      gap: 1rem;

      .home-header {
        display: flex !important;
        justify-content: space-between;
        align-items: center;

        .user-circle-image {
          width: 1.5rem;
          height: 1.5rem;
        }
      }

      .home-discover-section {
        padding-top: 0px;
      }
    }
  }
}

